main.css
* {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  padding: 0;
  margin: 0;
  color: #00bb80;
  background: #101010;
}

.wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100vw;
  height: 100vh;
  margin: 0 auto;
  max-width: 900px;
  font-family: "sofia-pro", sans-serif;
  text-align: center;
  width: 70%;
}

h1 {
  font-family: "bebas-neue", sans-serif;
  margin: 0 auto 2rem auto;
  font-weight: 400;
  font-size: 4rem;
  line-height: 1;
}

.earned-copy {
  color: #e1e1e1;
  margin: 0 auto 1.2rem auto;
  font-size: 1.2rem;
  font-weight: 300;
  text-align: center;
  max-width: 600px;
  visibility: hidden;
}

.input-holder {
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 4rem;
  margin: 0 auto 2rem auto;
}

input {
  height: 4rem;
  width: 12rem;
  font-size: 2rem;
  font-weight: 300;
  text-align: left;
  padding: 0 0 0.2rem 1rem;
  margin-left: 0.5rem;
  color: #9b9b9b;
  background: #101010;
  border: 1px solid #434343;
  border-right: 0;
  border-radius: 0;
}

input::-webkit-input-placeholder {
  font-size: 1.1rem;
  font-weight: 400;
  position: relative;
  top: -0.3rem;
  color: #9b9b9b;
}

input:-ms-input-placeholder {
  font-size: 1.1rem;
  font-weight: 400;
  position: relative;
  top: -0.3rem;
  color: #9b9b9b;
}

input::-ms-input-placeholder {
  font-size: 1.1rem;
  font-weight: 400;
  position: relative;
  top: -0.3rem;
  color: #9b9b9b;
}

input::placeholder {
  font-size: 1.1rem;
  font-weight: 400;
  position: relative;
  top: -0.3rem;
  color: #9b9b9b;
}

.dollar-sign {
  color: #9b9b9b;
  font-size: 2rem;
  font-weight: 300;
  margin: 0;
  padding-bottom: 0.4rem;
}

button {
  height: 4rem;
  font-size: 1.5rem;
  width: 4rem;
  font-weight: 400;
  text-align: center;
  background-color: #797979;
  color: #101010;
  border: 0;
  padding: 0;
}

.display-earnings {
  font-size: 3rem;
  font-weight: 200;
  font-family: "bebas-neue", sans-serif;
  margin: 0;
  line-height: 2.5rem;
}

@media (max-width: 700px) {
  .wrapper {
    width: 60;
  }

  input {
    width: 60%;
  }

  input::-webkit-input-placeholder {
    font-size: 0.8rem;
  }

  input:-ms-input-placeholder {
    font-size: 0.8rem;
  }

  input::-ms-input-placeholder {
    font-size: 0.8rem;
  }

  input::placeholder {
    font-size: 0.8rem;
  }

  h1 {
    font-size: 3.5rem;
    margin: 0 auto 1.5rem auto;
  }

  .earned-copy {
    font-size: 0.9rem;
    margin: 0 auto 0.8rem auto;
  }

  .display-earnings {
    font-size: 2.5rem;
    margin: 0;
  }
}

